--- a/lesson18/lesson18_3.ipynb
+++ b/lesson18/lesson18_3.ipynb
@@ -781,8 +781,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "56d84f02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 60129 entries, 0 to 60128\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   日期       60129 non-null  int64 \n",
+      " 1   代碼       60129 non-null  int64 \n",
+      " 2   進站人數     60129 non-null  int64 \n",
+      " 3   出站人數     60129 non-null  int64 \n",
+      " 4   站名       60129 non-null  object\n",
+      " 5   地址       60129 non-null  object\n",
+      " 6   gps      60129 non-null  object\n",
+      " 7   youBike  60129 non-null  object\n",
+      "dtypes: int64(4), object(4)\n",
+      "memory usage: 3.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df3.info() #檢查資料內容"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "747d7faf",
+   "metadata": {},
+   "source": [
+    "### 日期int轉換為datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "39c803f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 60129 entries, 0 to 60128\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column   Non-Null Count  Dtype         \n",
+      "---  ------   --------------  -----         \n",
+      " 0   日期       60129 non-null  datetime64[ns]\n",
+      " 1   代碼       60129 non-null  int64         \n",
+      " 2   進站人數     60129 non-null  int64         \n",
+      " 3   出站人數     60129 non-null  int64         \n",
+      " 4   站名       60129 non-null  object        \n",
+      " 5   地址       60129 non-null  object        \n",
+      " 6   gps      60129 non-null  object        \n",
+      " 7   youBike  60129 non-null  object        \n",
+      "dtypes: datetime64[ns](1), int64(3), object(4)\n",
+      "memory usage: 3.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df4 = df3.dropna()\n",
+    "df4['日期'] = pd.to_datetime(df4['日期'].astype(str))\n",
+    "df4.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "65c11498",
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +893,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20190423</td>\n",
+       "      <td>2019-04-23</td>\n",
        "      <td>900</td>\n",
        "      <td>8442</td>\n",
        "      <td>7743</td>\n",
@@ -830,7 +904,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>20190423</td>\n",
+       "      <td>2019-04-23</td>\n",
        "      <td>910</td>\n",
        "      <td>1394</td>\n",
        "      <td>1348</td>\n",
@@ -841,7 +915,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>20190423</td>\n",
+       "      <td>2019-04-23</td>\n",
        "      <td>920</td>\n",
        "      <td>2770</td>\n",
        "      <td>2423</td>\n",
@@ -852,7 +926,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>20190423</td>\n",
+       "      <td>2019-04-23</td>\n",
        "      <td>930</td>\n",
        "      <td>6113</td>\n",
        "      <td>6335</td>\n",
@@ -863,7 +937,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>20190423</td>\n",
+       "      <td>2019-04-23</td>\n",
        "      <td>940</td>\n",
        "      <td>2680</td>\n",
        "      <td>2726</td>\n",
@@ -885,7 +959,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>60124</th>\n",
-       "      <td>20191231</td>\n",
+       "      <td>2019-12-31</td>\n",
        "      <td>7360</td>\n",
        "      <td>5779</td>\n",
        "      <td>5782</td>\n",
@@ -896,7 +970,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>60125</th>\n",
-       "      <td>20191231</td>\n",
+       "      <td>2019-12-31</td>\n",
        "      <td>7361</td>\n",
        "      <td>146</td>\n",
        "      <td>142</td>\n",
@@ -907,7 +981,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>60126</th>\n",
-       "      <td>20191231</td>\n",
+       "      <td>2019-12-31</td>\n",
        "      <td>7362</td>\n",
        "      <td>116</td>\n",
        "      <td>134</td>\n",
@@ -918,7 +992,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>60127</th>\n",
-       "      <td>20191231</td>\n",
+       "      <td>2019-12-31</td>\n",
        "      <td>7380</td>\n",
        "      <td>654</td>\n",
        "      <td>585</td>\n",
@@ -929,7 +1003,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>60128</th>\n",
-       "      <td>20191231</td>\n",
+       "      <td>2019-12-31</td>\n",
        "      <td>7390</td>\n",
        "      <td>448</td>\n",
        "      <td>396</td>\n",
@@ -944,18 +1018,18 @@
        "</div>"
       ],
       "text/plain": [
-       "             日期    代碼  進站人數  出站人數   站名  \\\n",
-       "0      20190423   900  8442  7743   基隆   \n",
-       "1      20190423   910  1394  1348   三坑   \n",
-       "2      20190423   920  2770  2423   八堵   \n",
-       "3      20190423   930  6113  6335   七堵   \n",
-       "4      20190423   940  2680  2726   百福   \n",
-       "...         ...   ...   ...   ...  ...   \n",
-       "60124  20191231  7360  5779  5782   瑞芳   \n",
-       "60125  20191231  7361   146   142  海科館   \n",
-       "60126  20191231  7362   116   134  八斗子   \n",
-       "60127  20191231  7380   654   585  四腳亭   \n",
-       "60128  20191231  7390   448   396   暖暖   \n",
+       "              日期    代碼  進站人數  出站人數   站名  \\\n",
+       "0     2019-04-23   900  8442  7743   基隆   \n",
+       "1     2019-04-23   910  1394  1348   三坑   \n",
+       "2     2019-04-23   920  2770  2423   八堵   \n",
+       "3     2019-04-23   930  6113  6335   七堵   \n",
+       "4     2019-04-23   940  2680  2726   百福   \n",
+       "...          ...   ...   ...   ...  ...   \n",
+       "60124 2019-12-31  7360  5779  5782   瑞芳   \n",
+       "60125 2019-12-31  7361   146   142  海科館   \n",
+       "60126 2019-12-31  7362   116   134  八斗子   \n",
+       "60127 2019-12-31  7380   654   585  四腳亭   \n",
+       "60128 2019-12-31  7390   448   396   暖暖   \n",
        "\n",
        "                                                  地址                 gps  \\\n",
        "0                                        基隆市仁愛區港西街5號  25.13411 121.73997   \n",
@@ -986,13 +1060,13 @@
        "[60129 rows x 8 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df3"
+    "df4"
    ]
   }
  ],
