--- a/lesson18/lesson18_4.ipynb
+++ b/lesson18/lesson18_4.ipynb
@@ -5,7 +5,9 @@
    "id": "635ec30a",
    "metadata": {},
    "source": [
-    "### 自訂function"
+    "### 自訂function\n",
+    "\n",
+    "https://www.perplexity.ai/search/83b26786-5e8e-4cbe-ac68-acf4626be7c8"
    ]
   },
   {
@@ -521,6 +523,228 @@
     "allitems:list[str] = os.listdir(folder_abspath)\n",
     "filenames = [file_name for file_name in allitems if len(file_name) > 12]\n",
     "concatenate(folder_abspath,filenames[0]) #filenames[數值可變]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "af9b2b97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>日期</th>\n",
+       "      <th>代碼</th>\n",
+       "      <th>進站人數</th>\n",
+       "      <th>出站人數</th>\n",
+       "      <th>站名</th>\n",
+       "      <th>地址</th>\n",
+       "      <th>gps</th>\n",
+       "      <th>youBike</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-04-23</td>\n",
+       "      <td>900</td>\n",
+       "      <td>8442</td>\n",
+       "      <td>7743</td>\n",
+       "      <td>基隆</td>\n",
+       "      <td>基隆市仁愛區港西街5號</td>\n",
+       "      <td>25.13411 121.73997</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-04-23</td>\n",
+       "      <td>910</td>\n",
+       "      <td>1394</td>\n",
+       "      <td>1348</td>\n",
+       "      <td>三坑</td>\n",
+       "      <td>基隆市仁愛區德厚里龍安街 206 號</td>\n",
+       "      <td>25.12305 121.74202</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-04-23</td>\n",
+       "      <td>920</td>\n",
+       "      <td>2770</td>\n",
+       "      <td>2423</td>\n",
+       "      <td>八堵</td>\n",
+       "      <td>基隆市暖暖區八南里八堵路 142 號</td>\n",
+       "      <td>25.10843 121.72898</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-04-23</td>\n",
+       "      <td>930</td>\n",
+       "      <td>6113</td>\n",
+       "      <td>6335</td>\n",
+       "      <td>七堵</td>\n",
+       "      <td>基隆市七堵區長興里東新街 2 號</td>\n",
+       "      <td>25.09294 121.71415</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-04-23</td>\n",
+       "      <td>940</td>\n",
+       "      <td>2680</td>\n",
+       "      <td>2726</td>\n",
+       "      <td>百福</td>\n",
+       "      <td>基隆市七堵區堵南里明德三路 1 之 1 號</td>\n",
+       "      <td>25.07795 121.69379</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406756</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>7360</td>\n",
+       "      <td>7916</td>\n",
+       "      <td>8252</td>\n",
+       "      <td>瑞芳</td>\n",
+       "      <td>新北市瑞芳區龍潭里明燈路三段 82 號</td>\n",
+       "      <td>25.10861 121.80596</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406757</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>7361</td>\n",
+       "      <td>164</td>\n",
+       "      <td>195</td>\n",
+       "      <td>海科館</td>\n",
+       "      <td>基隆市中正區長潭里</td>\n",
+       "      <td>25.13754 121.79997</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406758</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>7362</td>\n",
+       "      <td>652</td>\n",
+       "      <td>720</td>\n",
+       "      <td>八斗子</td>\n",
+       "      <td>新北市瑞芳區建基路2段121號隔壁 砂子里省道臺 2 線 (與新北市瑞芳區交界處、無站房)</td>\n",
+       "      <td>25.13545 121.80261</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406759</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>7380</td>\n",
+       "      <td>1526</td>\n",
+       "      <td>656</td>\n",
+       "      <td>四腳亭</td>\n",
+       "      <td>新北市瑞芳區吉慶里中央路 65 號</td>\n",
+       "      <td>25.10283 121.76192</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406760</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>7390</td>\n",
+       "      <td>576</td>\n",
+       "      <td>447</td>\n",
+       "      <td>暖暖</td>\n",
+       "      <td>基隆市暖暖區暖暖里暖暖街 51 號</td>\n",
+       "      <td>25.10224 121.74048</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>406761 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               日期    代碼  進站人數  出站人數   站名  \\\n",
+       "0      2019-04-23   900  8442  7743   基隆   \n",
+       "1      2019-04-23   910  1394  1348   三坑   \n",
+       "2      2019-04-23   920  2770  2423   八堵   \n",
+       "3      2019-04-23   930  6113  6335   七堵   \n",
+       "4      2019-04-23   940  2680  2726   百福   \n",
+       "...           ...   ...   ...   ...  ...   \n",
+       "406756 2023-12-31  7360  7916  8252   瑞芳   \n",
+       "406757 2023-12-31  7361   164   195  海科館   \n",
+       "406758 2023-12-31  7362   652   720  八斗子   \n",
+       "406759 2023-12-31  7380  1526   656  四腳亭   \n",
+       "406760 2023-12-31  7390   576   447   暖暖   \n",
+       "\n",
+       "                                                   地址                 gps  \\\n",
+       "0                                         基隆市仁愛區港西街5號  25.13411 121.73997   \n",
+       "1                                  基隆市仁愛區德厚里龍安街 206 號  25.12305 121.74202   \n",
+       "2                                  基隆市暖暖區八南里八堵路 142 號  25.10843 121.72898   \n",
+       "3                                    基隆市七堵區長興里東新街 2 號  25.09294 121.71415   \n",
+       "4                               基隆市七堵區堵南里明德三路 1 之 1 號  25.07795 121.69379   \n",
+       "...                                               ...                 ...   \n",
+       "406756                            新北市瑞芳區龍潭里明燈路三段 82 號  25.10861 121.80596   \n",
+       "406757                                      基隆市中正區長潭里  25.13754 121.79997   \n",
+       "406758  新北市瑞芳區建基路2段121號隔壁 砂子里省道臺 2 線 (與新北市瑞芳區交界處、無站房)  25.13545 121.80261   \n",
+       "406759                              新北市瑞芳區吉慶里中央路 65 號  25.10283 121.76192   \n",
+       "406760                              基隆市暖暖區暖暖里暖暖街 51 號  25.10224 121.74048   \n",
+       "\n",
+       "       youBike  \n",
+       "0            Y  \n",
+       "1            Y  \n",
+       "2            Y  \n",
+       "3            Y  \n",
+       "4            N  \n",
+       "...        ...  \n",
+       "406756       Y  \n",
+       "406757       N  \n",
+       "406758       N  \n",
+       "406759       N  \n",
+       "406760       N  \n",
+       "\n",
+       "[406761 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "folder_name = '每日各站進出站人數'\n",
+    "folder_abspath = os.path.abspath(folder_name)\n",
+    "allitems:list[str] = os.listdir(folder_abspath)\n",
+    "filenames = [file_name for file_name in allitems if len(file_name) > 12]\n",
+    "all_data:list[DataFrame] = [concatenate(folder_abspath,filename) for filename in filenames]\n",
+    "combine_datas = pd.concat(all_data,ignore_index=True)\n",
+    "combine_datas"
    ]
   }
  ],
