--- a/lesson18/lesson18_4.ipynb
+++ b/lesson18/lesson18_4.ipynb
@@ -746,6 +746,219 @@
     "combine_datas = pd.concat(all_data,ignore_index=True)\n",
     "combine_datas"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b3647a3",
+   "metadata": {},
+   "source": [
+    "### pandas 如何排序時間欄位\n",
+    "ombine_datas.sort_values(by='日期')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "14db4fde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>日期</th>\n",
+       "      <th>代碼</th>\n",
+       "      <th>進站人數</th>\n",
+       "      <th>出站人數</th>\n",
+       "      <th>站名</th>\n",
+       "      <th>地址</th>\n",
+       "      <th>gps</th>\n",
+       "      <th>youBike</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-04-23</td>\n",
+       "      <td>900</td>\n",
+       "      <td>8442</td>\n",
+       "      <td>7743</td>\n",
+       "      <td>基隆</td>\n",
+       "      <td>基隆市仁愛區港西街5號</td>\n",
+       "      <td>25.13411 121.73997</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>2019-04-23</td>\n",
+       "      <td>5070</td>\n",
+       "      <td>533</td>\n",
+       "      <td>424</td>\n",
+       "      <td>南州</td>\n",
+       "      <td>屏東縣南州鄉仁里村仁里路 86 號</td>\n",
+       "      <td>22.49207 120.51174</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>2019-04-23</td>\n",
+       "      <td>5080</td>\n",
+       "      <td>15</td>\n",
+       "      <td>14</td>\n",
+       "      <td>鎮安</td>\n",
+       "      <td>屏東縣林邊鄉鎮安村永和路 4 號</td>\n",
+       "      <td>22.45794 120.51151</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>2019-04-23</td>\n",
+       "      <td>5090</td>\n",
+       "      <td>368</td>\n",
+       "      <td>325</td>\n",
+       "      <td>林邊</td>\n",
+       "      <td>屏東縣林邊鄉仁和村仁愛路 33 號</td>\n",
+       "      <td>22.43141 120.51538</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>2019-04-23</td>\n",
+       "      <td>5100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>95</td>\n",
+       "      <td>佳冬</td>\n",
+       "      <td>屏東縣佳冬鄉六根村復興路21號</td>\n",
+       "      <td>22.41416 120.54782</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406606</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>3350</td>\n",
+       "      <td>1229</td>\n",
+       "      <td>3101</td>\n",
+       "      <td>成功</td>\n",
+       "      <td>臺中市烏日區榮泉里中山路三段 550 號</td>\n",
+       "      <td>24.11424 120.59021</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406607</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>3360</td>\n",
+       "      <td>19617</td>\n",
+       "      <td>16699</td>\n",
+       "      <td>彰化</td>\n",
+       "      <td>彰化縣彰化市長樂里三民路 1 號</td>\n",
+       "      <td>24.08177 120.53854</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406608</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>3370</td>\n",
+       "      <td>1864</td>\n",
+       "      <td>1532</td>\n",
+       "      <td>花壇</td>\n",
+       "      <td>彰化縣花壇鄉花壇村中正路 370 號</td>\n",
+       "      <td>24.08173 120.53833</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406596</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>3250</td>\n",
+       "      <td>3517</td>\n",
+       "      <td>3091</td>\n",
+       "      <td>潭子</td>\n",
+       "      <td>臺中市潭子區中山路二段352-1號</td>\n",
+       "      <td>24.21255 120.70584</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406760</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>7390</td>\n",
+       "      <td>576</td>\n",
+       "      <td>447</td>\n",
+       "      <td>暖暖</td>\n",
+       "      <td>基隆市暖暖區暖暖里暖暖街 51 號</td>\n",
+       "      <td>25.10224 121.74048</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>406761 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               日期    代碼   進站人數   出站人數  站名                    地址  \\\n",
+       "0      2019-04-23   900   8442   7743  基隆           基隆市仁愛區港西街5號   \n",
+       "152    2019-04-23  5070    533    424  南州     屏東縣南州鄉仁里村仁里路 86 號   \n",
+       "153    2019-04-23  5080     15     14  鎮安      屏東縣林邊鄉鎮安村永和路 4 號   \n",
+       "154    2019-04-23  5090    368    325  林邊     屏東縣林邊鄉仁和村仁愛路 33 號   \n",
+       "155    2019-04-23  5100     95     95  佳冬       屏東縣佳冬鄉六根村復興路21號   \n",
+       "...           ...   ...    ...    ...  ..                   ...   \n",
+       "406606 2023-12-31  3350   1229   3101  成功  臺中市烏日區榮泉里中山路三段 550 號   \n",
+       "406607 2023-12-31  3360  19617  16699  彰化      彰化縣彰化市長樂里三民路 1 號   \n",
+       "406608 2023-12-31  3370   1864   1532  花壇    彰化縣花壇鄉花壇村中正路 370 號   \n",
+       "406596 2023-12-31  3250   3517   3091  潭子     臺中市潭子區中山路二段352-1號   \n",
+       "406760 2023-12-31  7390    576    447  暖暖     基隆市暖暖區暖暖里暖暖街 51 號   \n",
+       "\n",
+       "                       gps youBike  \n",
+       "0       25.13411 121.73997       Y  \n",
+       "152     22.49207 120.51174       Y  \n",
+       "153     22.45794 120.51151       N  \n",
+       "154     22.43141 120.51538       Y  \n",
+       "155     22.41416 120.54782       N  \n",
+       "...                    ...     ...  \n",
+       "406606  24.11424 120.59021       Y  \n",
+       "406607  24.08177 120.53854       Y  \n",
+       "406608  24.08173 120.53833       Y  \n",
+       "406596  24.21255 120.70584       Y  \n",
+       "406760  25.10224 121.74048       N  \n",
+       "\n",
+       "[406761 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sort_datas:DataFrame = combine_datas.sort_values(by='日期')\n",
+    "sort_datas"
+   ]
   }
  ],
  "metadata": {
