--- a/lesson18/lesson18_4.ipynb
+++ b/lesson18/lesson18_4.ipynb
@@ -752,7 +752,7 @@
    "id": "7b3647a3",
    "metadata": {},
    "source": [
-    "### pandas 如何排序時間欄位\n",
+    "### pandas 如何排序時間欄位的資料\n",
     "ombine_datas.sort_values(by='日期')"
    ]
   },
@@ -958,6 +958,464 @@
    "source": [
     "sort_datas:DataFrame = combine_datas.sort_values(by='日期')\n",
     "sort_datas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ba22464",
+   "metadata": {},
+   "source": [
+    "### DataFrame的日期欄位傳出新的index\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "42c872ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>代碼</th>\n",
+       "      <th>進站人數</th>\n",
+       "      <th>出站人數</th>\n",
+       "      <th>站名</th>\n",
+       "      <th>地址</th>\n",
+       "      <th>gps</th>\n",
+       "      <th>youBike</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>日期</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>900</td>\n",
+       "      <td>8442</td>\n",
+       "      <td>7743</td>\n",
+       "      <td>基隆</td>\n",
+       "      <td>基隆市仁愛區港西街5號</td>\n",
+       "      <td>25.13411 121.73997</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>5070</td>\n",
+       "      <td>533</td>\n",
+       "      <td>424</td>\n",
+       "      <td>南州</td>\n",
+       "      <td>屏東縣南州鄉仁里村仁里路 86 號</td>\n",
+       "      <td>22.49207 120.51174</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>5080</td>\n",
+       "      <td>15</td>\n",
+       "      <td>14</td>\n",
+       "      <td>鎮安</td>\n",
+       "      <td>屏東縣林邊鄉鎮安村永和路 4 號</td>\n",
+       "      <td>22.45794 120.51151</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>5090</td>\n",
+       "      <td>368</td>\n",
+       "      <td>325</td>\n",
+       "      <td>林邊</td>\n",
+       "      <td>屏東縣林邊鄉仁和村仁愛路 33 號</td>\n",
+       "      <td>22.43141 120.51538</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>5100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>95</td>\n",
+       "      <td>佳冬</td>\n",
+       "      <td>屏東縣佳冬鄉六根村復興路21號</td>\n",
+       "      <td>22.41416 120.54782</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-31</th>\n",
+       "      <td>3350</td>\n",
+       "      <td>1229</td>\n",
+       "      <td>3101</td>\n",
+       "      <td>成功</td>\n",
+       "      <td>臺中市烏日區榮泉里中山路三段 550 號</td>\n",
+       "      <td>24.11424 120.59021</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-31</th>\n",
+       "      <td>3360</td>\n",
+       "      <td>19617</td>\n",
+       "      <td>16699</td>\n",
+       "      <td>彰化</td>\n",
+       "      <td>彰化縣彰化市長樂里三民路 1 號</td>\n",
+       "      <td>24.08177 120.53854</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-31</th>\n",
+       "      <td>3370</td>\n",
+       "      <td>1864</td>\n",
+       "      <td>1532</td>\n",
+       "      <td>花壇</td>\n",
+       "      <td>彰化縣花壇鄉花壇村中正路 370 號</td>\n",
+       "      <td>24.08173 120.53833</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-31</th>\n",
+       "      <td>3250</td>\n",
+       "      <td>3517</td>\n",
+       "      <td>3091</td>\n",
+       "      <td>潭子</td>\n",
+       "      <td>臺中市潭子區中山路二段352-1號</td>\n",
+       "      <td>24.21255 120.70584</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-31</th>\n",
+       "      <td>7390</td>\n",
+       "      <td>576</td>\n",
+       "      <td>447</td>\n",
+       "      <td>暖暖</td>\n",
+       "      <td>基隆市暖暖區暖暖里暖暖街 51 號</td>\n",
+       "      <td>25.10224 121.74048</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>406761 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              代碼   進站人數   出站人數  站名                    地址                 gps  \\\n",
+       "日期                                                                             \n",
+       "2019-04-23   900   8442   7743  基隆           基隆市仁愛區港西街5號  25.13411 121.73997   \n",
+       "2019-04-23  5070    533    424  南州     屏東縣南州鄉仁里村仁里路 86 號  22.49207 120.51174   \n",
+       "2019-04-23  5080     15     14  鎮安      屏東縣林邊鄉鎮安村永和路 4 號  22.45794 120.51151   \n",
+       "2019-04-23  5090    368    325  林邊     屏東縣林邊鄉仁和村仁愛路 33 號  22.43141 120.51538   \n",
+       "2019-04-23  5100     95     95  佳冬       屏東縣佳冬鄉六根村復興路21號  22.41416 120.54782   \n",
+       "...          ...    ...    ...  ..                   ...                 ...   \n",
+       "2023-12-31  3350   1229   3101  成功  臺中市烏日區榮泉里中山路三段 550 號  24.11424 120.59021   \n",
+       "2023-12-31  3360  19617  16699  彰化      彰化縣彰化市長樂里三民路 1 號  24.08177 120.53854   \n",
+       "2023-12-31  3370   1864   1532  花壇    彰化縣花壇鄉花壇村中正路 370 號  24.08173 120.53833   \n",
+       "2023-12-31  3250   3517   3091  潭子     臺中市潭子區中山路二段352-1號  24.21255 120.70584   \n",
+       "2023-12-31  7390    576    447  暖暖     基隆市暖暖區暖暖里暖暖街 51 號  25.10224 121.74048   \n",
+       "\n",
+       "           youBike  \n",
+       "日期                  \n",
+       "2019-04-23       Y  \n",
+       "2019-04-23       Y  \n",
+       "2019-04-23       N  \n",
+       "2019-04-23       Y  \n",
+       "2019-04-23       N  \n",
+       "...            ...  \n",
+       "2023-12-31       Y  \n",
+       "2023-12-31       Y  \n",
+       "2023-12-31       Y  \n",
+       "2023-12-31       Y  \n",
+       "2023-12-31       N  \n",
+       "\n",
+       "[406761 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sort_datas:DataFrame = combine_datas.sort_values(by='日期')\n",
+    "sort_datas1:DataFrame = sort_datas.set_index('日期')\n",
+    "sort_datas1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "65f05bd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 406761 entries, 2019-04-23 to 2023-12-31\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column   Non-Null Count   Dtype \n",
+      "---  ------   --------------   ----- \n",
+      " 0   代碼       406761 non-null  int64 \n",
+      " 1   進站人數     406761 non-null  int64 \n",
+      " 2   出站人數     406761 non-null  int64 \n",
+      " 3   站名       406761 non-null  object\n",
+      " 4   地址       406761 non-null  object\n",
+      " 5   gps      406761 non-null  object\n",
+      " 6   youBike  406761 non-null  object\n",
+      "dtypes: int64(3), object(4)\n",
+      "memory usage: 24.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "sort_datas1.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c7220c6",
+   "metadata": {},
+   "source": [
+    "### 可以把sort_datas1當作是記憶體的資料庫"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ee1bc185",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>代碼</th>\n",
+       "      <th>進站人數</th>\n",
+       "      <th>出站人數</th>\n",
+       "      <th>站名</th>\n",
+       "      <th>地址</th>\n",
+       "      <th>gps</th>\n",
+       "      <th>youBike</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>日期</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>900</td>\n",
+       "      <td>8442</td>\n",
+       "      <td>7743</td>\n",
+       "      <td>基隆</td>\n",
+       "      <td>基隆市仁愛區港西街5號</td>\n",
+       "      <td>25.13411 121.73997</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>5070</td>\n",
+       "      <td>533</td>\n",
+       "      <td>424</td>\n",
+       "      <td>南州</td>\n",
+       "      <td>屏東縣南州鄉仁里村仁里路 86 號</td>\n",
+       "      <td>22.49207 120.51174</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>5080</td>\n",
+       "      <td>15</td>\n",
+       "      <td>14</td>\n",
+       "      <td>鎮安</td>\n",
+       "      <td>屏東縣林邊鄉鎮安村永和路 4 號</td>\n",
+       "      <td>22.45794 120.51151</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>5090</td>\n",
+       "      <td>368</td>\n",
+       "      <td>325</td>\n",
+       "      <td>林邊</td>\n",
+       "      <td>屏東縣林邊鄉仁和村仁愛路 33 號</td>\n",
+       "      <td>22.43141 120.51538</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>5100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>95</td>\n",
+       "      <td>佳冬</td>\n",
+       "      <td>屏東縣佳冬鄉六根村復興路21號</td>\n",
+       "      <td>22.41416 120.54782</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31</th>\n",
+       "      <td>3310</td>\n",
+       "      <td>1471</td>\n",
+       "      <td>1465</td>\n",
+       "      <td>五權</td>\n",
+       "      <td>臺中市南區建國南路二段201號</td>\n",
+       "      <td>24.12892 120.66657</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31</th>\n",
+       "      <td>3300</td>\n",
+       "      <td>28209</td>\n",
+       "      <td>31140</td>\n",
+       "      <td>臺中</td>\n",
+       "      <td>臺中市中區綠川里臺灣大道一段 1 號</td>\n",
+       "      <td>24.13747 120.68691</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31</th>\n",
+       "      <td>3290</td>\n",
+       "      <td>1209</td>\n",
+       "      <td>1030</td>\n",
+       "      <td>精武</td>\n",
+       "      <td>臺中市東區東南里東光路 161號</td>\n",
+       "      <td>24.14928 120.69777</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31</th>\n",
+       "      <td>3280</td>\n",
+       "      <td>3047</td>\n",
+       "      <td>2824</td>\n",
+       "      <td>太原</td>\n",
+       "      <td>臺中市北屯區北興里東光路 665 號</td>\n",
+       "      <td>24.16449 120.69988</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31</th>\n",
+       "      <td>3320</td>\n",
+       "      <td>3406</td>\n",
+       "      <td>3184</td>\n",
+       "      <td>大慶</td>\n",
+       "      <td>臺中市南區樹德里7鄰大慶街2段130號</td>\n",
+       "      <td>24.11911 120.64795</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>60129 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              代碼   進站人數   出站人數  站名                   地址                 gps  \\\n",
+       "日期                                                                            \n",
+       "2019-04-23   900   8442   7743  基隆          基隆市仁愛區港西街5號  25.13411 121.73997   \n",
+       "2019-04-23  5070    533    424  南州    屏東縣南州鄉仁里村仁里路 86 號  22.49207 120.51174   \n",
+       "2019-04-23  5080     15     14  鎮安     屏東縣林邊鄉鎮安村永和路 4 號  22.45794 120.51151   \n",
+       "2019-04-23  5090    368    325  林邊    屏東縣林邊鄉仁和村仁愛路 33 號  22.43141 120.51538   \n",
+       "2019-04-23  5100     95     95  佳冬      屏東縣佳冬鄉六根村復興路21號  22.41416 120.54782   \n",
+       "...          ...    ...    ...  ..                  ...                 ...   \n",
+       "2019-12-31  3310   1471   1465  五權      臺中市南區建國南路二段201號  24.12892 120.66657   \n",
+       "2019-12-31  3300  28209  31140  臺中   臺中市中區綠川里臺灣大道一段 1 號  24.13747 120.68691   \n",
+       "2019-12-31  3290   1209   1030  精武     臺中市東區東南里東光路 161號  24.14928 120.69777   \n",
+       "2019-12-31  3280   3047   2824  太原   臺中市北屯區北興里東光路 665 號  24.16449 120.69988   \n",
+       "2019-12-31  3320   3406   3184  大慶  臺中市南區樹德里7鄰大慶街2段130號  24.11911 120.64795   \n",
+       "\n",
+       "           youBike  \n",
+       "日期                  \n",
+       "2019-04-23       Y  \n",
+       "2019-04-23       Y  \n",
+       "2019-04-23       N  \n",
+       "2019-04-23       Y  \n",
+       "2019-04-23       N  \n",
+       "...            ...  \n",
+       "2019-12-31       Y  \n",
+       "2019-12-31       Y  \n",
+       "2019-12-31       Y  \n",
+       "2019-12-31       Y  \n",
+       "2019-12-31       Y  \n",
+       "\n",
+       "[60129 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sort_datas1.loc['2019-04-23']\n",
+    "sort_datas1.loc['2019-04']\n",
+    "sort_datas1.loc['2019']"
    ]
   }
  ],
